--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
     <div class="container">
       <h2 class="animate">Как выступать уверенно, даже если вы никогда не говорили перед людьми?</h2>
       <p class="animate">
-        Простая — и даже дурак справится — система упражнений, которая сэкономит часы, потраченные впустую на поиск в Google: «Как выступать?»
+        Простая — что даже дурак справится — система упражнений, которая сэкономит часы, потраченные впустую на поиск в Google: «Как выступать?»
       </p>
 
       <div class="highlight-box animate">
@@ -705,17 +705,17 @@
       </div>
 
       <div class="bonus-item animate">
-        <span><strong>«Формулировки мыслей» — веб-ресурс</strong><br>Доступ к веб-ресурсу для повышения навыка чёткой и ясной передачи идей.</span>
+        <span><strong>«Формулировки мыслей»</strong><br>Доступ к веб-ресурсу для отработки навыка формулировки мыслей.</span>
         <span class="bonus-price">2590 ₽</span>
       </div>
 
       <div class="bonus-item animate">
-        <span><strong>«Минутная практика» — упражнения в перерывах</strong><br>Ресурс с минутными упражнениями для практики — разработан для тех, у кого очень мало времени.</span>
+        <span><strong>«1 минутка » — Сборник упржнений</strong><br>Ресурс с минутными упражнениями для практики — разработан для тех, у кого очень мало времени.</span>
         <span class="bonus-price">4590 ₽</span>
       </div>
 
       <div class="bonus-item animate">
-        <span><strong>«Как составить текст к выступлению?» — пошаговая схема</strong><br>Простая инструкция, с которой справится даже ребёнок.</span>
+        <span><strong>«Как составить текст к выступлению?»</strong><br>Простая инструкция для составления текст на любую тему, с которой справится даже ребёнок.</span>
         <span class="bonus-price">2990 ₽</span>
       </div>
 
