--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
     <div class="container">
       <h2 class="animate">Как выступать уверенно, даже если вы никогда не говорили перед людьми?</h2>
       <p class="animate">
-        Простая — что даже дурак справится — система упражнений, которая сэкономит часы, потраченные впустую на поиск в Google: «Как выступать?»
+        Простая — и даже дурак справится — система упражнений, которая сэкономит часы, потраченные впустую на поиск в Google: «Как выступать?»
       </p>
 
       <div class="highlight-box animate">
@@ -705,17 +705,17 @@
       </div>
 
       <div class="bonus-item animate">
-        <span><strong>«Формулировки мыслей»</strong><br>Доступ к веб-ресурсу для отработки навыка формулировки мыслей.</span>
+        <span><strong>«Формулировки мыслей» — веб-ресурс</strong><br>Доступ к веб-ресурсу для повышения навыка чёткой и ясной передачи идей.</span>
         <span class="bonus-price">2590 ₽</span>
       </div>
 
       <div class="bonus-item animate">
-        <span><strong>«1 минутка » — Сборник упржнений</strong><br>Ресурс с минутными упражнениями для практики — разработан для тех, у кого очень мало времени.</span>
+        <span><strong>«Минутная практика» — упражнения в перерывах</strong><br>Ресурс с минутными упражнениями для практики — разработан для тех, у кого очень мало времени.</span>
         <span class="bonus-price">4590 ₽</span>
       </div>
 
       <div class="bonus-item animate">
-        <span><strong>«Как составить текст к выступлению?»</strong><br>Простая инструкция для составления текст на любую тему, с которой справится даже ребёнок.</span>
+        <span><strong>«Как составить текст к выступлению?» — пошаговая схема</strong><br>Простая инструкция, с которой справится даже ребёнок.</span>
         <span class="bonus-price">2990 ₽</span>
       </div>
 
@@ -761,7 +761,7 @@
     <div class="modal">
       <div class="modal-close" id="closeModal">&times;</div>
       <h3>Получите доступ к СПИЧ СТАРТ</h3>
-      <form id="leadForm" action="#" method="POST">
+      <form id="leadForm">
         <div class="form-group">
           <label for="name">Ваше имя</label>
           <input type="text" id="name" name="name" placeholder="Анна" required />
@@ -790,6 +790,12 @@
   </div>
 
   <script>
+    // ============= НАСТРОЙКИ =============
+    // Замените на свой токен и chat_id
+    const botToken = '8344168861:AAEl_ZEXiKEDKzOS_novnMsqDzJ2JgM6WH0';  // Например: '7012345678:AAHabcd1234-ABCD-1234-abcd1234'
+    const chatId = '402109857';      // Например: '123456789'
+    // =====================================
+
     // Генерация частиц
     const particlesContainer = document.getElementById('particles');
     for (let i = 0; i < 40; i++) {
@@ -842,13 +848,45 @@
       }
     };
 
-    // Обработка формы
-    document.getElementById('leadForm').addEventListener('submit', function(e) {
+    // Отправка формы в Telegram
+    document.getElementById('leadForm').addEventListener('submit', async function(e) {
       e.preventDefault();
-      alert('Спасибо! Данные отправлены. Доступ будет выслан в Telegram.');
-      modal.style.display = 'none';
+
+      const name = document.getElementById('name').value.trim();
+      const telegram = document.getElementById('telegram').value.trim();
+      const phone = document.getElementById('phone').value.trim();
+
+      const message = `
+📦 <b>Новая заявка в СПИЧ СТАРТ!</b>
+
+👤 Имя: ${name}
+💬 Telegram: ${telegram}
+📞 Телефон: ${phone}
+
+🔔 Доступ запрошен. Свяжитесь с пользователем.
+      `.trim();
+
+      try {
+        await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            chat_id: chatId,
+            text: message,
+            parse_mode: 'HTML'
+          })
+        });
+
+        alert('✅ Спасибо! Данные отправлены. Скоро свяжемся!');
+        modal.style.display = 'none';
+        document.getElementById('leadForm').reset();
+      } catch (error) {
+        console.error('Ошибка отправки:', error);
+        alert('❌ Ошибка отправки. Пожалуйста, напишите нам в Telegram.');
+      }
     });
   </script>
-
 </body>
 </html>
