--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
         <div class="checkbox-group">
           <input type="checkbox" id="agreement" name="agreement" required />
           <label for="agreement">
-            Я даю согласие на обработку персональных данных и принимаю условия <a href=https://drive.google.com/drive/u/0/folders/1wPP4O6c34GuwFzWDkpnSHnIXFj2rP-i4" target="_blank">оферты</a>
+            Я даю согласие на обработку персональных данных и принимаю условия <a https://drive.google.com/file/d/1tZIkeEOi6hMhgm9qCC4t5J2wswyuB043/view?usp=sharing" target="_blank">оферты</a>
           </label>
         </div>
 
