--- a/index.html
+++ b/index.html
@@ -552,6 +552,10 @@
       margin: 24px 0 16px;
     }
 
+    .checkbox-group input {
+      margin-top: 4px;
+    }
+
     .checkbox-group label {
       font-size: 0.9rem;
       color: var(--text-light);
@@ -579,6 +583,12 @@
     .btn-submit:hover {
       transform: translateY(-3px);
       box-shadow: 0 10px 25px rgba(124, 111, 255, 0.3);
+    }
+
+    .btn-submit:disabled {
+      opacity: 0.7;
+      cursor: not-allowed;
+      transform: none;
     }
 
     .modal-close {
@@ -780,7 +790,7 @@
         <div class="checkbox-group">
           <input type="checkbox" id="agreement" name="agreement" required />
           <label for="agreement">
-            Я даю согласие на обработку персональных данных и принимаю условия <a https://drive.google.com/file/d/1tZIkeEOi6hMhgm9qCC4t5J2wswyuB043/view?usp=sharing" target="_blank">оферты</a>
+            Я даю согласие на обработку персональных данных и принимаю условия <a href="https://drive.google.com/file/d/1tZIkeEOi6hMhgm9qCC4t5J2wswyuB043/view?usp=sharing" target="_blank">оферты</a>
           </label>
         </div>
 
@@ -792,8 +802,8 @@
   <script>
     // ============= НАСТРОЙКИ =============
     // Замените на свой токен и chat_id
-    const botToken = '8344168861:AAEl_ZEXiKEDKzOS_novnMsqDzJ2JgM6WH0';  // Например: '7012345678:AAHabcd1234-ABCD-1234-abcd1234'
-    const chatId = '402109857';      // Например: '123456789'
+    const botToken = '8344168861:AAEl_ZEXiKEDKzOS_novnMsqDzJ2JgM6WH0';  // Ваш токен
+    const chatId = '402109857';      // Ваш chat_id
     // =====================================
 
     // Генерация частиц
@@ -852,6 +862,10 @@
     document.getElementById('leadForm').addEventListener('submit', async function(e) {
       e.preventDefault();
 
+      const btnSubmit = document.querySelector('.btn-submit');
+      btnSubmit.disabled = true;
+      btnSubmit.textContent = 'Отправка...';
+
       const name = document.getElementById('name').value.trim();
       const telegram = document.getElementById('telegram').value.trim();
       const phone = document.getElementById('phone').value.trim();
@@ -867,7 +881,7 @@
       `.trim();
 
       try {
-        await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+        const response = await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -879,12 +893,19 @@
           })
         });
 
-        alert('✅ Спасибо! Данные отправлены. Скоро свяжемся!');
-        modal.style.display = 'none';
-        document.getElementById('leadForm').reset();
+        if (response.ok) {
+          alert('✅ Спасибо! Данные отправлены. Мы свяжемся с вами в Telegram.');
+          modal.style.display = 'none';
+          document.getElementById('leadForm').reset();
+        } else {
+          throw new Error('Ошибка Telegram API');
+        }
       } catch (error) {
         console.error('Ошибка отправки:', error);
-        alert('❌ Ошибка отправки. Пожалуйста, напишите нам в Telegram.');
+        alert('❌ Ошибка отправки. Пожалуйста, напишите нам в Telegram напрямую.');
+      } finally {
+        btnSubmit.disabled = false;
+        btnSubmit.textContent = 'Получить доступ';
       }
     });
   </script>
