--- a/index.html
+++ b/index.html
@@ -496,7 +496,6 @@
       z-index: 1000;
       justify-content: center;
       align-items: center;
-      animation: fadeIn 0.4s ease-out;
     }
 
     .modal {
@@ -801,9 +800,8 @@
 
   <script>
     // ============= НАСТРОЙКИ =============
-    // Замените на свой токен и chat_id
-    const botToken = '8344168861:AAEl_ZEXiKEDKzOS_novnMsqDzJ2JgM6WH0';  // Ваш токен
-    const chatId = '402109857';      // Ваш chat_id
+    // Замените на свой chat_id (ваш Telegram ID)
+    const yourTelegramId = '402109857';  // Ваш ID в Telegram
     // =====================================
 
     // Генерация частиц
@@ -858,7 +856,7 @@
       }
     };
 
-    // Отправка формы в Telegram
+    // Отправка формы
     document.getElementById('leadForm').addEventListener('submit', async function(e) {
       e.preventDefault();
 
@@ -870,24 +868,15 @@
       const telegram = document.getElementById('telegram').value.trim();
       const phone = document.getElementById('phone').value.trim();
 
-      const message = `
-📦 <b>Новая заявка в СПИЧ СТАРТ!</b>
+      const message = `Здравствуйте! Меня зовут ${name}. Я хочу получить доступ к СПИЧ СТАРТ. Мой ник в Telegram: ${telegram}. Телефон: ${phone}`;
 
-👤 Имя: ${name}
-💬 Telegram: ${telegram}
-📞 Телефон: ${phone}
-
-🔔 Доступ запрошен. Свяжитесь с пользователем.
-      `.trim();
-
+      // Пытаемся отправить через Telegram Bot API
       try {
-        const response = await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+        const response = await fetch(`https://api.telegram.org/bot8344168861:AAEl_ZEXiKEDKzOS_novnMsqDzJ2JgM6WH0/sendMessage`, {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({
-            chat_id: chatId,
+            chat_id: yourTelegramId,
             text: message,
             parse_mode: 'HTML'
           })
@@ -897,16 +886,18 @@
           alert('✅ Спасибо! Данные отправлены. Мы свяжемся с вами в Telegram.');
           modal.style.display = 'none';
           document.getElementById('leadForm').reset();
-        } else {
-          throw new Error('Ошибка Telegram API');
+          return;
         }
       } catch (error) {
-        console.error('Ошибка отправки:', error);
-        alert('❌ Ошибка отправки. Пожалуйста, напишите нам в Telegram напрямую.');
-      } finally {
-        btnSubmit.disabled = false;
-        btnSubmit.textContent = 'Получить доступ';
+        console.warn('API не сработал, открываем чат в Telegram...');
       }
+
+      // Если API не работает — открываем чат
+      const url = `https://web.telegram.org/a/#${yourTelegramId}`;
+      window.open(url, '_blank');
+      alert('✅ Данные сохранены. Откройте Telegram, чтобы написать нам!');
+      modal.style.display = 'none';
+      document.getElementById('leadForm').reset();
     });
   </script>
 </body>
