--- a/index.html
+++ b/index.html
@@ -800,8 +800,9 @@
 
   <script>
     // ============= НАСТРОЙКИ =============
-    // Замените на свой chat_id (ваш Telegram ID)
-    const yourTelegramId = '402109857';  // Ваш ID в Telegram
+    // Замените на свой токен и chat_id, если хотите получать сообщения
+    const botToken = '8344168861:AAEl_ZEXiKEDKzOS_novnMsqDzJ2JgM6WH0'; // ← Устарел/недействителен
+    const chatId = '402109857'; // Ваш Telegram ID
     // =====================================
 
     // Генерация частиц
@@ -868,15 +869,23 @@
       const telegram = document.getElementById('telegram').value.trim();
       const phone = document.getElementById('phone').value.trim();
 
-      const message = `Здравствуйте! Меня зовут ${name}. Я хочу получить доступ к СПИЧ СТАРТ. Мой ник в Telegram: ${telegram}. Телефон: ${phone}`;
+      const message = `
+📦 <b>Новая заявка в СПИЧ СТАРТ!</b>
 
-      // Пытаемся отправить через Telegram Bot API
+👤 Имя: ${name}
+💬 Telegram: ${telegram}
+📞 Телефон: ${phone}
+
+🔔 Доступ запрошен.
+      `.trim();
+
+      // Попытка отправить через Telegram Bot API
       try {
-        const response = await fetch(`https://api.telegram.org/bot8344168861:AAEl_ZEXiKEDKzOS_novnMsqDzJ2JgM6WH0/sendMessage`, {
+        const response = await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({
-            chat_id: yourTelegramId,
+            chat_id: chatId,
             text: message,
             parse_mode: 'HTML'
           })
@@ -884,20 +893,20 @@
 
         if (response.ok) {
           alert('✅ Спасибо! Данные отправлены. Мы свяжемся с вами в Telegram.');
-          modal.style.display = 'none';
-          document.getElementById('leadForm').reset();
-          return;
+        } else {
+          throw new Error('API error');
         }
       } catch (error) {
-        console.warn('API не сработал, открываем чат в Telegram...');
+        console.warn('API не работает, открываем Telegram Web...');
+        const url = `https://web.telegram.org/a/#${chatId}`;
+        window.open(url, '_blank');
+        alert('✅ Отлично! Откройте Telegram, чтобы написать нам напрямую.');
+      } finally {
+        modal.style.display = 'none';
+        document.getElementById('leadForm').reset();
+        btnSubmit.disabled = false;
+        btnSubmit.textContent = 'Получить доступ';
       }
-
-      // Если API не работает — открываем чат
-      const url = `https://web.telegram.org/a/#${yourTelegramId}`;
-      window.open(url, '_blank');
-      alert('✅ Данные сохранены. Откройте Telegram, чтобы написать нам!');
-      modal.style.display = 'none';
-      document.getElementById('leadForm').reset();
     });
   </script>
 </body>
