--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       --primary-dark: #5d4fdf;
       --accent: #d946ef;
       --accent-light: #e879f9;
-      --success: #10b981;
       --border-radius: 20px;
       --shadow: 0 15px 35px rgba(0, 0, 30, 0.25);
       --shadow-lg: 0 25px 50px rgba(0, 0, 30, 0.3);
@@ -343,6 +342,7 @@
       box-shadow: 0 6px 16px rgba(124, 111, 255, 0.3);
     }
 
+    /* Красивая стоимость под бонусами */
     .bonus-total {
       text-align: center;
       font-size: 1.8rem;
@@ -603,23 +603,6 @@
       opacity: 1;
     }
 
-    /* Прогресс-бар */
-    .progress-bar-container {
-      width: 100%;
-      height: 4px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 2px;
-      margin-bottom: 20px;
-    }
-
-    #progressBar {
-      width: 20%;
-      height: 100%;
-      background: linear-gradient(90deg, var(--primary), var(--accent));
-      border-radius: 2px;
-      transition: width 0.4s;
-    }
-
     /* Анимации */
     @keyframes fadeInUp {
       from {
@@ -749,6 +732,7 @@
         <span class="bonus-price">2490 ₽</span>
       </div>
 
+      <!-- Перенесённая и стилизованная стоимость -->
       <div class="bonus-total animate">
         Общая стоимость бонусов: <s>17 140 ₽</s> → <strong>всего за 8990 ₽!</strong>
       </div>
@@ -780,69 +764,47 @@
     </div>
   </footer>
 
-  <!-- Модальное окно (обновлённая форма) -->
+  <!-- Модальное окно -->
   <div class="modal-overlay" id="modalOverlay">
     <div class="modal">
       <div class="modal-close" id="closeModal">&times;</div>
-
-      <!-- Прогресс-бар -->
-      <div class="progress-bar-container">
-        <div id="progressBar"></div>
-      </div>
-
       <h3>Получите доступ к СПИЧ СТАРТ</h3>
-      <p style="color: var(--text-light); font-size: 0.95rem; text-align: center; margin-bottom: 24px;">
-        Оставьте контакт — и мы пришлём инструкцию по входу в программу
-      </p>
-
       <form id="leadForm">
         <div class="form-group">
-          <label for="name">Имя</label>
-          <input type="text" id="name" name="name" placeholder="Например, Анна" required />
+          <label for="name">Ваше имя</label>
+          <input type="text" id="name" name="name" placeholder="Анна" required />
         </div>
 
         <div class="form-group">
-          <label for="phone">Телефон</label>
+          <label for="telegram">Ник в Telegram</label>
+          <input type="text" id="telegram" name="telegram" placeholder="@anna" required />
+        </div>
+
+        <div class="form-group">
+          <label for="phone">Номер телефона</label>
           <input type="tel" id="phone" name="phone" placeholder="+7 (999) 123-45-67" required />
-        </div>
-
-        <div class="form-group">
-          <label for="telegram">Telegram (по желанию)</label>
-          <input type="text" id="telegram" name="telegram" placeholder="@anna_m" />
-          <small style="color: var(--text-light); font-size: 0.85rem; display: block; margin-top: 6px;">
-            Укажите, если хотите получить доступ мгновенно
-          </small>
         </div>
 
         <div class="checkbox-group">
           <input type="checkbox" id="agreement" name="agreement" required />
           <label for="agreement">
-            Я даю согласие на обработку персональных данных и принимаю условия <a href="https://example.com/offerta" target="_blank">оферты</a>
+            Я даю согласие на обработку персональных данных и принимаю условия <a href="https://drive.google.com/file/d/1tZIkeEOi6hMhgm9qCC4t5J2wswyuB043/view?usp=sharing" target="_blank">оферты</a>
           </label>
         </div>
 
-        <button type="submit" class="btn-submit">🚀 Начать выступать</button>
+        <button type="submit" class="btn-submit">Получить доступ</button>
       </form>
-
-      <p style="font-size: 0.85rem; color: var(--text-light); margin-top: 16px;">
-        Через 1 минуту после регистрации вы получите доступ к первым урокам
-      </p>
     </div>
   </div>
 
-  <!-- Подключаем IMask для маски телефона -->
-  <script src="https://unpkg.com/imask"></script>
   <script>
-    // ============= НАСТРОЙКИ =============
-    const botToken = '8207422259:AAGxOpcN61rH90wOLK3V1DgE8ZflU_fs8oc'; // Замените на свой
-    const chatId = '402109857'; // Ваш ID
-    // =====================================
+    // ============= 🔴 ОБЯЗАТЕЛЬНО ЗАМЕНИТЬ! 🔴 =============
+    // Получите токен у @BotFather в Telegram
+    const botToken = 'ВАШ_ТОКЕН_ЗДЕСЬ'; // Например: 1234567890:AAHabcd123xyz...
 
-    // Маска телефона
-    const phoneInput = document.getElementById('phone');
-    const phoneMask = IMask(phoneInput, {
-      mask: '+7 (000) 000-00-00'
-    });
+    // Ваш Telegram ID (узнайте у @userinfobot)
+    const chatId = 'ВАШ_CHAT_ID_ЗДЕСЬ'; // Например: 123456789
+    // =======================================================
 
     // Генерация частиц
     const particlesContainer = document.getElementById('particles');
@@ -894,28 +856,10 @@
       if (e.target === modal) modal.style.display = 'none';
     };
 
-    // Прогресс-бар
-    const form = document.getElementById('leadForm');
-    const inputs = form.querySelectorAll('input[required]');
-    const progressBar = document.getElementById('progressBar');
-
-    function updateProgress() {
-      let filled = 0;
-      inputs.forEach(input => {
-        if (input.value.trim() !== '') filled++;
-      });
-      const progress = (filled / inputs.length) * 100;
-      progressBar.style.width = Math.max(20, progress) + '%';
-    }
-
-    inputs.forEach(input => {
-      input.addEventListener('input', updateProgress);
-      input.addEventListener('blur', updateProgress);
-    });
-
     // Отправка формы
-    form.addEventListener('submit', async function(e) {
+    document.getElementById('leadForm').addEventListener('submit', async function(e) {
       e.preventDefault();
+
       const btnSubmit = document.querySelector('.btn-submit');
       btnSubmit.disabled = true;
       btnSubmit.textContent = 'Отправка...';
@@ -928,12 +872,13 @@
 📦 <b>Новая заявка в СПИЧ СТАРТ!</b>
 
 👤 Имя: ${name}
-💬 Telegram: ${telegram || 'не указан'}
+💬 Telegram: ${telegram}
 📞 Телефон: ${phone}
 
 🔔 Доступ запрошен.
       `.trim();
 
+      // Попытка отправить через Telegram API
       try {
         const response = await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
           method: 'POST',
@@ -951,12 +896,14 @@
           throw new Error('API error');
         }
       } catch (error) {
-        const url = `https://t.me/spichstart_bot`;
+        console.warn('API не работает. Открываем Telegram...');
+        // Резерв: открываем бота с сообщением
+        const url = `https://t.me/spichstart_bot?text=${encodeURIComponent(message)}`;
         window.open(url, '_blank');
-        alert('✅ Отлично! Перейдите в Telegram, чтобы начать.');
+        alert('✅ Отлично! Откройте Telegram и напишите нам напрямую.');
       } finally {
         modal.style.display = 'none';
-        form.reset();
+        document.getElementById('leadForm').reset();
         btnSubmit.disabled = false;
         btnSubmit.textContent = 'Получить доступ';
       }
