--- a/index.html
+++ b/index.html
@@ -800,10 +800,10 @@
   <script>
     // ============= 🔴 ОБЯЗАТЕЛЬНО ЗАМЕНИТЬ! 🔴 =============
     // Получите токен у @BotFather в Telegram
-    const botToken = 'ВАШ_ТОКЕН_ЗДЕСЬ'; // Например: 1234567890:AAHabcd123xyz...
+    const botToken = '8207422259:AAGxOpcN61rH90wOLK3V1DgE8ZflU_fs8oc'; // Например: 1234567890:AAHabcd123xyz...
 
     // Ваш Telegram ID (узнайте у @userinfobot)
-    const chatId = 'ВАШ_CHAT_ID_ЗДЕСЬ'; // Например: 123456789
+    const chatId = '402109857'; // Например: 123456789
     // =======================================================
 
     // Генерация частиц
