--- a/index.html
+++ b/index.html
@@ -797,78 +797,97 @@
     </div>
   </div>
 
-  <script>
-    // ============= 🔴 ОБЯЗАТЕЛЬНО ЗАМЕНИТЬ! 🔴 =============
-    // Получите токен у @BotFather в Telegram
-    const botToken = '8207422259:AAGxOpcN61rH90wOLK3V1DgE8ZflU_fs8oc'; // Например: 1234567890:AAHabcd123xyz...
+ <script>
+  // ============= 🔴 ОБЯЗАТЕЛЬНО ЗАМЕНИТЬ! 🔴 =============
+  // Получите токен у @BotFather в Telegram
+  const botToken = '8207422259:AAGxOpcN61rH90wOLK3V1DgE8ZflU_fs8oc'; // Например: 1234567890:AAHabcd123xyz...
+  // Ваш Telegram ID (узнайте у @userinfobot)
+  const chatId = '402109857'; // Например: 123456789
+  // =======================================================
 
-    // Ваш Telegram ID (узнайте у @userinfobot)
-    const chatId = '402109857'; // Например: 123456789
-    // =======================================================
+  // 🔗 ССЫЛКА НА ТВОЮ ГРУППУ В TELEGRAM
+  const telegramGroupUrl = 'https://t.me/osinec_me'; // ⚠️ Замени на свою группу!
+  // Генерация частиц
+  const particlesContainer = document.getElementById('particles');
+  for (let i = 0; i < 40; i++) {
+    const particle = document.createElement('div');
+    particle.classList.add('particle');
+    particle.style.top = Math.random() * 100 + 'vh';
+    particle.style.left = Math.random() * 100 + 'vw';
+    particle.style.animationDelay = Math.random() * 10 + 's';
+    particlesContainer.appendChild(particle);
+  }
 
-    // Генерация частиц
-    const particlesContainer = document.getElementById('particles');
-    for (let i = 0; i < 40; i++) {
-      const particle = document.createElement('div');
-      particle.classList.add('particle');
-      particle.style.top = Math.random() * 100 + 'vh';
-      particle.style.left = Math.random() * 100 + 'vw';
-      particle.style.animationDelay = Math.random() * 10 + 's';
-      particlesContainer.appendChild(particle);
-    }
-
-    // Анимация появления
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.style.opacity = 1;
-          entry.target.style.transform = 'translateY(0)';
-        }
-      });
-    }, { threshold: 0.1 });
-
-    document.querySelectorAll('.animate').forEach(el => {
-      el.style.opacity = 0;
-      el.style.transform = 'translateY(50px)';
-      observer.observe(el);
-    });
-
-    // Счётчик мест
-    const spots = document.getElementById('spots');
-    let count = 15;
-    const interval = setInterval(() => {
-      count--;
-      spots.textContent = count;
-      if (count <= 0) {
-        spots.textContent = "Закончились";
-        clearInterval(interval);
+  // Анимация появления
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.style.opacity = 1;
+        entry.target.style.transform = 'translateY(0)';
       }
-    }, 4000);
+    });
+  }, { threshold: 0.1 });
 
-    // Модальное окно
-    const modal = document.getElementById('modalOverlay');
-    const openBtn = document.getElementById('openModal');
-    const closeBtn = document.getElementById('closeModal');
+  document.querySelectorAll('.animate').forEach(el => {
+    el.style.opacity = 0;
+    el.style.transform = 'translateY(50px)';
+    observer.observe(el);
+  });
 
-    openBtn.onclick = () => modal.style.display = 'flex';
-    closeBtn.onclick = () => modal.style.display = 'none';
-    window.onclick = (e) => {
-      if (e.target === modal) modal.style.display = 'none';
-    };
+  // Счётчик мест
+  const spots = document.getElementById('spots');
+  let count = 15;
+  const interval = setInterval(() => {
+    count--;
+    spots.textContent = count;
+    if (count <= 0) {
+      spots.textContent = "Закончились";
+      clearInterval(interval);
+    }
+  }, 4000);
 
-    // Отправка формы
-    document.getElementById('leadForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
+  // Модальное окно
+  const modal = document.getElementById('modalOverlay');
+  const openBtn = document.getElementById('openModal');
+  const closeBtn = document.getElementById('closeModal');
 
-      const btnSubmit = document.querySelector('.btn-submit');
-      btnSubmit.disabled = true;
-      btnSubmit.textContent = 'Отправка...';
+  let formSubmitted = false; // Флаг: была ли отправлена форма
 
-      const name = document.getElementById('name').value.trim();
-      const telegram = document.getElementById('telegram').value.trim();
-      const phone = document.getElementById('phone').value.trim();
+  openBtn.onclick = () => {
+    modal.style.display = 'flex';
+    formSubmitted = false; // Сбрасываем при открытии
+  };
 
-      const message = `
+  // Клик по "закрыть"
+  closeBtn.onclick = () => {
+    if (formSubmitted) {
+      window.open(telegramGroupUrl, '_blank');
+    }
+    modal.style.display = 'none';
+  };
+
+  window.onclick = (e) => {
+    if (e.target === modal) {
+      if (formSubmitted) {
+        window.open(telegramGroupUrl, '_blank');
+      }
+      modal.style.display = 'none';
+    }
+  };
+
+  // Отправка формы
+  document.getElementById('leadForm').addEventListener('submit', async function(e) {
+    e.preventDefault();
+
+    const btnSubmit = document.querySelector('.btn-submit');
+    btnSubmit.disabled = true;
+    btnSubmit.textContent = 'Отправка...';
+
+    const name = document.getElementById('name').value.trim();
+    const telegram = document.getElementById('telegram').value.trim();
+    const phone = document.getElementById('phone').value.trim();
+
+    const message = `
 📦 <b>Новая заявка в СПИЧ СТАРТ!</b>
 
 👤 Имя: ${name}
@@ -876,38 +895,40 @@
 📞 Телефон: ${phone}
 
 🔔 Доступ запрошен.
-      `.trim();
+    `.trim();
 
-      // Попытка отправить через Telegram API
-      try {
-        const response = await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({
-            chat_id: chatId,
-            text: message,
-            parse_mode: 'HTML'
-          })
-        });
+    try {
+      const response = await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          chat_id: chatId,
+          text: message,
+          parse_mode: 'HTML'
+        })
+      });
 
-        if (response.ok) {
-          alert('✅ Спасибо! Мы свяжемся с вами в Telegram.');
-        } else {
-          throw new Error('API error');
-        }
-      } catch (error) {
-        console.warn('API не работает. Открываем Telegram...');
-        // Резерв: открываем бота с сообщением
-        const url = `https://t.me/spichstart_bot?text=${encodeURIComponent(message)}`;
-        window.open(url, '_blank');
-        alert('✅ Отлично! Откройте Telegram и напишите нам напрямую.');
-      } finally {
-        modal.style.display = 'none';
-        document.getElementById('leadForm').reset();
-        btnSubmit.disabled = false;
-        btnSubmit.textContent = 'Получить доступ';
+      if (response.ok) {
+        alert('✅ Спасибо! Мы свяжемся с вами в Telegram.');
+        formSubmitted = true; // Помечаем, что форма отправлена
+        window.open(telegramGroupUrl, '_blank'); // Открываем группу
+      } else {
+        throw new Error('API error');
       }
-    });
-  </script>
+    } catch (error) {
+      console.warn('API не работает. Открываем Telegram...');
+      const url = `https://t.me/spichstart_bot?text=${encodeURIComponent(message)}`;
+      window.open(url, '_blank');
+      alert('✅ Отлично! Откройте Telegram и напишите нам напрямую.');
+      formSubmitted = true; // Всё равно считаем, что отправлено
+      window.open(telegramGroupUrl, '_blank'); // Перенаправляем в группу
+    } finally {
+      modal.style.display = 'none';
+      document.getElementById('leadForm').reset();
+      btnSubmit.disabled = false;
+      btnSubmit.textContent = 'Получить доступ';
+    }
+  });
+</script>
 </body>
 </html>
