--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
   <header>
     <div class="container">
       <h1>СПИЧ СТАРТ</h1>
-      <p>4-недельная программа подготовки к выступлениям для тех, кто ни разу не был на сцене</p>
+      <p>4-х недельная программа подготовки к выступлениям для тех, кто хочет заявить о своих идеях</p>
     </div>
   </header>
 
@@ -670,7 +670,7 @@
     <div class="container">
       <h2 class="animate">Как выступать уверенно, даже если вы никогда не говорили перед людьми?</h2>
       <p class="animate">
-        Простая — и даже дурак справится — система упражнений, которая сэкономит часы, потраченные впустую на поиск в Google: «Как выступать?»
+        Простая — что даже дурак справится — система упражнений, которая сэкономит часы, потраченные впустую на поиск в Google: «Как выступать?»
       </p>
 
       <div class="highlight-box animate">
@@ -680,7 +680,7 @@
       <ul class="benefit-list animate">
         <li class="benefit-item">
           <div class="icon-check"><i class="fas fa-rocket"></i></div>
-          <p>Доступ к курсу в TG-боте <strong>[7 дней бесплатно]</strong> — <a href="https://t.me/spichstart_bot" target="_blank">попробуйте прямо сейчас</a></p>
+          <p>Доступ к курсу в TG <strong></strong> 
         </li>
         <li class="benefit-item">
           <div class="icon-check"><i class="fas fa-brain"></i></div>
@@ -703,7 +703,7 @@
       <h2 class="section-title animate">Эксклюзивные бонусы — только для участников</h2>
 
       <div class="bonus-item animate">
-        <span><strong>«Готовая сцена: полный чек-лист выступления»</strong><br>Подробное руководство по подготовке к любому выступлению: как убедиться, что всё идёт по плану.</span>
+        <span><strong>«Готовая сцена: полный чек-лист выступления»</strong><br>Подробное руководство по подготовке к любому выступлению: как убедиться, что всё идёт по плану. Будет доступен вам навсегда, чтобы вы могли его использовать к любому выступлению.</span>
         <span class="bonus-price">2490 ₽</span>
       </div>
 
@@ -723,7 +723,7 @@
       </div>
 
       <div class="bonus-item animate">
-        <span><strong>«Как составить текст к выступлению?» — пошаговая схема</strong><br>Простая инструкция, с которой справится даже ребёнок.</span>
+        <span><strong>«Как составить текст к выступлению?» — пошаговая схема</strong><br>Простая инструкция, с которой справится даже ребёнок. Вы сможете использовать ее даже после прохождения курса.</span>
         <span class="bonus-price">2990 ₽</span>
       </div>
 
@@ -749,7 +749,7 @@
       <button class="btn" id="openModal">Получить доступ сейчас</button>
 
       <p class="guarantee">
-        Если через 30 дней вы не увидите разницы — вернём деньги <strong>или</strong> продолжим работать бесплатно, пока вы не достигнете результата.
+        Если после окончания курса вы не увидите результата — вернём деньги <strong>или</strong> продолжим работать бесплатно, пока вы не достигнете результата.
       </p>
       <p class="limit">
         🔒 Доступ только для <strong id="spots">15</strong> новых пользователей каждый месяц
