--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
       <ul class="benefit-list animate">
         <li class="benefit-item">
           <div class="icon-check"><i class="fas fa-rocket"></i></div>
-          <p>Доступ к курсу в TG <strong></strong>[7 дней бесплатно]</strong> — <a href="https://t.me/spichstart_bot " target="_blank">попробуйте прямо сейчас</a></p> 
+          <p>Доступ к курсу в TG <strong></strong>[7 дней бесплатно]</strong> — <a href="https://t.me/bspeaker_bot" target="_blank">попробуйте прямо сейчас</a></p> 
         </li>
         <li class="benefit-item">
           <div class="icon-check"><i class="fas fa-brain"></i></div>
