--- a/index.html
+++ b/index.html
@@ -717,6 +717,11 @@
         <span class="bonus-price">2590 ₽</span>
       </div>
 
+ <div class="bonus-item animate">
+        <span><strong>«Страха нет»</strong><br>Пошаговый план действие, как избавиться от страха публичных выступлений </span>
+        <span class="bonus-price">1590 ₽</span>
+      </div>
+
       <div class="bonus-item animate">
         <span><strong>«Минутная практика» — упражнения в перерывах</strong><br>Ресурс с минутными упражнениями для практики — разработан для тех, у кого очень мало времени.</span>
         <span class="bonus-price">4590 ₽</span>
@@ -734,7 +739,7 @@
 
       <!-- Перенесённая и стилизованная стоимость -->
       <div class="bonus-total animate">
-        Общая стоимость бонусов: <s>17 140 ₽</s> → <strong>всего за 8990 ₽!</strong>
+        Общая стоимость бонусов: <s>18 330 ₽</s> → <strong>всего за 8990 ₽!</strong>
       </div>
     </div>
   </section>
