--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
       <ul class="benefit-list animate">
         <li class="benefit-item">
           <div class="icon-check"><i class="fas fa-rocket"></i></div>
-          <p>Доступ к курсу в TG <strong></strong>[попробуйте бесплатно]</strong> — <a href="https://t.me/bspeaker_bot" target="_blank"> прямо сейчас</a></p> 
+          <p>Доступ к курсу в TG <strong>[попробуйте бесплатно]</strong> — <a href="https://t.me/bspeaker_bot" target="_blank"> прямо сейчас</a></p> 
         </li>
         <li class="benefit-item">
           <div class="icon-check"><i class="fas fa-brain"></i></div>
@@ -717,7 +717,7 @@
         <span class="bonus-price">2590 ₽</span>
       </div>
 
- <div class="bonus-item animate">
+      <div class="bonus-item animate">
         <span><strong>«Страха нет»</strong><br>Пошаговый план действие, как избавиться от страха публичных выступлений </span>
         <span class="bonus-price">1590 ₽</span>
       </div>
@@ -757,7 +757,7 @@
         Если после окончания курса вы не увидите результата — вернём деньги <strong>или</strong> продолжим работать бесплатно, пока вы не достигнете результата.
       </p>
       <p class="limit">
-        🔒 Доступ только для <strong id="spots">15</strong> новых пользователей каждый месяц
+        🔒 Доступ только для 15 новых пользователей в месяц!
       </p>
     </div>
   </section>
@@ -802,97 +802,86 @@
     </div>
   </div>
 
- <script>
-  // ============= 🔴 ОБЯЗАТЕЛЬНО ЗАМЕНИТЬ! 🔴 =============
-  // Получите токен у @BotFather в Telegram
-  const botToken = '8207422259:AAGxOpcN61rH90wOLK3V1DgE8ZflU_fs8oc'; // Например: 1234567890:AAHabcd123xyz...
-  // Ваш Telegram ID (узнайте у @userinfobot)
-  const chatId = '402109857'; // Например: 123456789
-  // =======================================================
+  <script>
+    // ============= 🔴 ОБЯЗАТЕЛЬНО ЗАМЕНИТЬ! 🔴 =============
+    // Получите токен у @BotFather в Telegram
+    const botToken = '8207422259:AAGxOpcN61rH90wOLK3V1DgE8ZflU_fs8oc'; // Например: 1234567890:AAHabcd123xyz...
+    // Ваш Telegram ID (узнайте у @userinfobot)
+    const chatId = '402109857'; // Например: 123456789
+    // =======================================================
 
-  // 🔗 ССЫЛКА НА ТВОЮ ГРУППУ В TELEGRAM
-  const telegramGroupUrl = 'https://t.me/osinec_me'; // ⚠️ Замени на свою группу!
-  // Генерация частиц
-  const particlesContainer = document.getElementById('particles');
-  for (let i = 0; i < 40; i++) {
-    const particle = document.createElement('div');
-    particle.classList.add('particle');
-    particle.style.top = Math.random() * 100 + 'vh';
-    particle.style.left = Math.random() * 100 + 'vw';
-    particle.style.animationDelay = Math.random() * 10 + 's';
-    particlesContainer.appendChild(particle);
-  }
+    // 🔗 ССЫЛКА НА ТВОЮ ГРУППУ В TELEGRAM
+    const telegramGroupUrl = 'https://t.me/osinec_me'; // ⚠️ Замени на свою группу!
 
-  // Анимация появления
-  const observer = new IntersectionObserver((entries) => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.style.opacity = 1;
-        entry.target.style.transform = 'translateY(0)';
-      }
+    // Генерация частиц
+    const particlesContainer = document.getElementById('particles');
+    for (let i = 0; i < 40; i++) {
+      const particle = document.createElement('div');
+      particle.classList.add('particle');
+      particle.style.top = Math.random() * 100 + 'vh';
+      particle.style.left = Math.random() * 100 + 'vw';
+      particle.style.animationDelay = Math.random() * 10 + 's';
+      particlesContainer.appendChild(particle);
+    }
+
+    // Анимация появления
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.style.opacity = 1;
+          entry.target.style.transform = 'translateY(0)';
+        }
+      });
+    }, { threshold: 0.1 });
+
+    document.querySelectorAll('.animate').forEach(el => {
+      el.style.opacity = 0;
+      el.style.transform = 'translateY(50px)';
+      observer.observe(el);
     });
-  }, { threshold: 0.1 });
 
-  document.querySelectorAll('.animate').forEach(el => {
-    el.style.opacity = 0;
-    el.style.transform = 'translateY(50px)';
-    observer.observe(el);
-  });
+    // Модальное окно
+    const modal = document.getElementById('modalOverlay');
+    const openBtn = document.getElementById('openModal');
+    const closeBtn = document.getElementById('closeModal');
 
-  // Счётчик мест
-  const spots = document.getElementById('spots');
-  let count = 15;
-  const interval = setInterval(() => {
-    count--;
-    spots.textContent = count;
-    if (count <= 0) {
-      spots.textContent = "Закончились";
-      clearInterval(interval);
-    }
-  }, 4000);
+    let formSubmitted = false; // Флаг: была ли отправлена форма
 
-  // Модальное окно
-  const modal = document.getElementById('modalOverlay');
-  const openBtn = document.getElementById('openModal');
-  const closeBtn = document.getElementById('closeModal');
+    openBtn.onclick = () => {
+      modal.style.display = 'flex';
+      formSubmitted = false; // Сбрасываем при открытии
+    };
 
-  let formSubmitted = false; // Флаг: была ли отправлена форма
-
-  openBtn.onclick = () => {
-    modal.style.display = 'flex';
-    formSubmitted = false; // Сбрасываем при открытии
-  };
-
-  // Клик по "закрыть"
-  closeBtn.onclick = () => {
-    if (formSubmitted) {
-      window.open(telegramGroupUrl, '_blank');
-    }
-    modal.style.display = 'none';
-  };
-
-  window.onclick = (e) => {
-    if (e.target === modal) {
+    // Клик по "закрыть"
+    closeBtn.onclick = () => {
       if (formSubmitted) {
         window.open(telegramGroupUrl, '_blank');
       }
       modal.style.display = 'none';
-    }
-  };
+    };
 
-  // Отправка формы
-  document.getElementById('leadForm').addEventListener('submit', async function(e) {
-    e.preventDefault();
+    window.onclick = (e) => {
+      if (e.target === modal) {
+        if (formSubmitted) {
+          window.open(telegramGroupUrl, '_blank');
+        }
+        modal.style.display = 'none';
+      }
+    };
 
-    const btnSubmit = document.querySelector('.btn-submit');
-    btnSubmit.disabled = true;
-    btnSubmit.textContent = 'Отправка...';
+    // Отправка формы
+    document.getElementById('leadForm').addEventListener('submit', async function(e) {
+      e.preventDefault();
 
-    const name = document.getElementById('name').value.trim();
-    const telegram = document.getElementById('telegram').value.trim();
-    const phone = document.getElementById('phone').value.trim();
+      const btnSubmit = document.querySelector('.btn-submit');
+      btnSubmit.disabled = true;
+      btnSubmit.textContent = 'Отправка...';
 
-    const message = `
+      const name = document.getElementById('name').value.trim();
+      const telegram = document.getElementById('telegram').value.trim();
+      const phone = document.getElementById('phone').value.trim();
+
+      const message = `
 📦 <b>Новая заявка в СПИЧ СТАРТ!</b>
 
 👤 Имя: ${name}
@@ -900,40 +889,40 @@
 📞 Телефон: ${phone}
 
 🔔 Доступ запрошен.
-    `.trim();
+      `.trim();
 
-    try {
-      const response = await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          chat_id: chatId,
-          text: message,
-          parse_mode: 'HTML'
-        })
-      });
+      try {
+        const response = await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            chat_id: chatId,
+            text: message,
+            parse_mode: 'HTML'
+          })
+        });
 
-      if (response.ok) {
-        alert('✅ Спасибо! Мы свяжемся с вами в Telegram.');
-        formSubmitted = true; // Помечаем, что форма отправлена
-        window.open(telegramGroupUrl, '_blank'); // Открываем группу
-      } else {
-        throw new Error('API error');
+        if (response.ok) {
+          alert('✅ Спасибо! Мы свяжемся с вами в Telegram.');
+          formSubmitted = true;
+          window.open(telegramGroupUrl, '_blank');
+        } else {
+          throw new Error('API error');
+        }
+      } catch (error) {
+        console.warn('API не работает. Открываем Telegram...');
+        const url = `https://t.me/spichstart_bot?text=${encodeURIComponent(message)}`;
+        window.open(url, '_blank');
+        alert('✅ Отлично! Откройте Telegram и напишите нам напрямую.');
+        formSubmitted = true;
+        window.open(telegramGroupUrl, '_blank');
+      } finally {
+        modal.style.display = 'none';
+        document.getElementById('leadForm').reset();
+        btnSubmit.disabled = false;
+        btnSubmit.textContent = 'Получить доступ';
       }
-    } catch (error) {
-      console.warn('API не работает. Открываем Telegram...');
-      const url = `https://t.me/spichstart_bot?text=${encodeURIComponent(message)}`;
-      window.open(url, '_blank');
-      alert('✅ Отлично! Откройте Telegram и напишите нам напрямую.');
-      formSubmitted = true; // Всё равно считаем, что отправлено
-      window.open(telegramGroupUrl, '_blank'); // Перенаправляем в группу
-    } finally {
-      modal.style.display = 'none';
-      document.getElementById('leadForm').reset();
-      btnSubmit.disabled = false;
-      btnSubmit.textContent = 'Получить доступ';
-    }
-  });
-</script>
+    });
+  </script>
 </body>
 </html>
