--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
         </li>
         <li class="benefit-item">
           <div class="icon-check"><i class="fas fa-user-friends"></i></div>
-          <p><strong>Координация выступлени <br> 1 на 1<br/></strong></p>
+          <p><strong>Координация по подготовке <br> 1 на 1<br/></strong></p>
         </li>
       </ul>
     </div>
